--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,13 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.16
   flutter_svg_provider: ^1.0.7
   get_it: ^8.0.3
   image_picker: ^1.1.2
   image_picker_android: ^0.8.12+19
+  intl: ^0.19.0
   new_device_apps: ^1.0.0
   supabase_flutter: ^2.8.2
 dev_dependencies:
